# ska-tango-event-monitor

./: .gitignore  .gitlab-ci.yml  CODEOWNERS  Makefile  README.md  pyproject.toml
build_pytango/9.5/: Dockerfile  build.sh  patch-pytango-version.sh
build_pytango/9.5.0/: build.sh
build_pytango/9.5.0/patches/: 0001-Add-QueryEventSystem-DServer-command.patch  0002-Add-performance-monitoring-to-the-event-system.patch  0003-Improve-QueryEventSystem-output.patch
build_pytango/9.5/patches/: 0001-Add-QueryEventSystem-DServer-command.patch  0002-Add-performance-monitoring-to-the-event-system.patch  0003-Improve-QueryEventSystem-output.patch  0004-QueryEventSystem-ensure-we-are-holding-the-correct-l.patch
src/ska_tango_event_monitor/: event_monitor.py
tests/: Dockerfile  MyServer.py  build.sh  compose.yaml
